# IndexZoo

./: CMakeLists.txt
correlation/: CMakeLists.txt  approx_correlation_index.h  base_benchmark.h  btree_index.h  correlation_common.h  correlation_index.h  correlation_test.cxx  flight_benchmark.h  insertion_test.cxx  micro_benchmark.h  postgres_test.cxx  sensor_benchmark.h  stock_benchmark.h  taxi_benchmark.h  tpch_benchmark.h  tuple_schema.h
correlation/analysis/: Makefile  flights_analyzer.py  flights_preprocessing.cxx  micro_analyzer.py  preprocessing.h  stock_analyzer.py  taxi_analyzer.py  taxi_preprocessing.cxx
correlation/scripts/: exp0_run.sh  exp1_run.sh  exp2_run.sh  exp3_run.sh  exp4_run.sh  exp5_run.sh
lsm/: CMakeLists.txt  lsm_test.cxx  lsm_trie.h  lsm_trie_test.cxx  new_lsm.h  trie.h
lsm/deprecated/: lsm.h  lsm_test.cxx  trie.h
performance/: CMakeLists.txt
src/: CMakeLists.txt  FindJemalloc.cmake  generic_data_table.h  utils.h
src/dynamic_index/multithread/bw_tree/: bwtree.h
src/dynamic_index/singlethread/art_tree/: art.cpp
src/dynamic_index/singlethread/stx_btree/: btree.h
test/: static_index_numeric_test.cpp
