CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
SET (CMAKE_C_COMPILER "gcc")
SET (CMAKE_CXX_COMPILER "g++")

CMAKE_POLICY (SET CMP0042 NEW)

PROJECT (IndexZoo)
# SET (CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS "-std=c++11 -msse2 -mcx16 -Wno-invalid-offsetof -Wno-deprecated-register -Wno-null-dereference" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS_DEBUG "-O0 -g" CACHE INTERNAL "compiler options" FORCE)
SET (CMAKE_CXX_FLAGS_RELEASE "-O0 -g" CACHE INTERNAL "compiler options" FORCE)
IF (NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE "Release")
ENDIF ()

INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/third_party/googletest/googletest/include)
LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/cmake-build-debug-vm/src)

ADD_SUBDIRECTORY(third_party)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

FILE (GLOB_RECURSE SRC_LIST "*.cpp")
ADD_EXECUTABLE (index_perf_test index_perf_test.cxx )
TARGET_LINK_LIBRARIES (index_perf_test indexzoo)
TARGET_LINK_LIBRARIES (index_perf_test pthread)

ADD_EXECUTABLE (generic_index_perf_test generic_index_perf_test.cxx )
TARGET_LINK_LIBRARIES (generic_index_perf_test indexzoo)
TARGET_LINK_LIBRARIES (generic_index_perf_test pthread)


ADD_DEFINITIONS(-DWORDS_BIGENDIAN_SET=1)
ADD_DEFINITIONS(-DSTDC_HEADERS=1)
ADD_DEFINITIONS(-DHAVE_SYS_TYPES_H=1)
ADD_DEFINITIONS(-DHAVE_SYS_STAT_H=1)
ADD_DEFINITIONS(-DCACHE_LINE_SIZE=64)
ADD_DEFINITIONS(-DHAVE_CXX_STATIC_ASSERT=1)
ADD_DEFINITIONS(-DHAVE_CXX_CONSTEXPR=1)
ADD_DEFINITIONS(-DHAVE_TIME_H=1)
ADD_DEFINITIONS(-DHAVE_CLOCK_GETTIME=1)
ADD_DEFINITIONS(-DMASSTREE_ROW_TYPE_BAG=1)
ADD_DEFINITIONS(-DMASSTREE_MAXKEYLEN=255)
ADD_DEFINITIONS(-DHAVE_UNALIGNED_ACCESS=1)
ADD_DEFINITIONS(-DHAVE___BUILTIN_CLZ=1)
ADD_DEFINITIONS(-DHAVE___BUILTIN_CLZL=1)