PROJECT (IndexZoo)

FILE (GLOB_RECURSE SRC_LIST "*.cpp")

ADD_EXECUTABLE (correlation_test correlation_test.cxx ${SRC_LIST})

ADD_EXECUTABLE (insertion_test insertion_test.cxx ${SRC_LIST})

TARGET_LINK_LIBRARIES (correlation_test indexzoo)
TARGET_LINK_LIBRARIES (correlation_test jemalloc pthread)


ADD_DEFINITIONS(-DWORDS_BIGENDIAN_SET=1)
ADD_DEFINITIONS(-DSTDC_HEADERS=1)
ADD_DEFINITIONS(-DHAVE_SYS_TYPES_H=1)
ADD_DEFINITIONS(-DHAVE_SYS_STAT_H=1)
ADD_DEFINITIONS(-DCACHE_LINE_SIZE=64)
ADD_DEFINITIONS(-DHAVE_CXX_STATIC_ASSERT=1)
ADD_DEFINITIONS(-DHAVE_CXX_CONSTEXPR=1)
ADD_DEFINITIONS(-DHAVE_TIME_H=1)
ADD_DEFINITIONS(-DHAVE_CLOCK_GETTIME=1)
ADD_DEFINITIONS(-DMASSTREE_ROW_TYPE_BAG=1)
ADD_DEFINITIONS(-DMASSTREE_MAXKEYLEN=255)
ADD_DEFINITIONS(-DHAVE_UNALIGNED_ACCESS=1)
ADD_DEFINITIONS(-DHAVE___BUILTIN_CLZ=1)
ADD_DEFINITIONS(-DHAVE___BUILTIN_CLZL=1)


INSTALL (TARGETS correlation_test 
    RUNTIME DESTINATION bin
    )
